feat: Add financial report generation
Integrates jspdf and jspdf-autotable to allow users to generate financial reports for a selected month. This feature provides a downloadable PDF summary of session income, status, and payment details.

Also updates dependencies and imports related to this new functionality.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/"
+    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
+    "jspdf": "https://esm.sh/jspdf@2.5.1",
+    "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.8.2"
   }
 }
 </script>
